data/derived/sp14/progs/unify/prog0224.ml.out
Characters 194-202:
  | h::t -> let rec helper v = (helper v/10) :: h1 mod 10 :: []
                                ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
